fix issue of forgotten space for left and right sections and add gap between elements

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -27,14 +27,16 @@ body {
   
 }
 
-.left-side{
+.left-side {
   display:flex;
-  justify-content: left;
+  justify-content: flex-start;
+  gap:16px;
 }
 
-.right-side{
+.right-side {
   display:flex;
   justify-content: flex-end;
+  gap:16px;
 }
 
 .profile-image {
